--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
                 </div>
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
-                        Built by <a href="https://www.linkedin.com/in/salisu-shuaibu-ba411313b/" class="footer__link">Salisu Shuaibu</a> for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>.
-                        Copyright &copy; by Salisu Shuaibu.
+                        Built by <a href="https://www.linkedin.com/in/salisu-shuaibu-ba411313b/" class="footer__link">Salisu Shuaibu</a>
+                        2020
                     </p>
                 </div>
             </div>
